--- a/PCM-TW.ipynb
+++ b/PCM-TW.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "                value = graph[x][y]\n",
     "                if(value!=None):\n",
     "                    if(contains_edge(solution,x,y)):\n",
-    "                        g.edge(str(x),str(y),label=str(value), color='red')\n",
+    "                        g.edge(str(x),str(y),label=str(value), color='red', penwidth='4')\n",
     "                    else:\n",
     "                        g.edge(str(x),str(y),label=str(value))                        \n",
     "    return display(g)\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -427,8 +427,8 @@
        "</g>\r\n",
        "<!-- 0&#45;&gt;1 -->\r\n",
        "<g id=\"edge1\" class=\"edge\"><title>0&#45;&gt;1</title>\r\n",
-       "<path fill=\"none\" stroke=\"red\" d=\"M33.4831,-77.5927C44.6683,-85.0011 60.3565,-95.3919 73.2187,-103.911\"/>\r\n",
-       "<polygon fill=\"red\" stroke=\"red\" points=\"71.312,-106.846 81.5818,-109.45 75.1774,-101.01 71.312,-106.846\"/>\r\n",
+       "<path fill=\"none\" stroke=\"red\" stroke-width=\"4\" d=\"M33.4831,-77.5927C44.6683,-85.0011 60.3565,-95.3919 73.2187,-103.911\"/>\r\n",
+       "<polygon fill=\"red\" stroke=\"red\" stroke-width=\"4\" points=\"71.312,-106.846 81.5818,-109.45 75.1774,-101.01 71.312,-106.846\"/>\r\n",
        "<text text-anchor=\"middle\" x=\"57.5\" y=\"-98.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">3</text>\r\n",
        "</g>\r\n",
        "<!-- 2 -->\r\n",
@@ -469,8 +469,8 @@
        "</g>\r\n",
        "<!-- 1&#45;&gt;4 -->\r\n",
        "<g id=\"edge5\" class=\"edge\"><title>1&#45;&gt;4</title>\r\n",
-       "<path fill=\"none\" stroke=\"red\" d=\"M114.992,-120.634C141.952,-123.226 194.765,-128.304 226.966,-131.401\"/>\r\n",
-       "<polygon fill=\"red\" stroke=\"red\" points=\"226.74,-134.895 237.029,-132.368 227.41,-127.927 226.74,-134.895\"/>\r\n",
+       "<path fill=\"none\" stroke=\"red\" stroke-width=\"4\" d=\"M114.992,-120.634C141.952,-123.226 194.765,-128.304 226.966,-131.401\"/>\r\n",
+       "<polygon fill=\"red\" stroke=\"red\" stroke-width=\"4\" points=\"226.74,-134.895 237.029,-132.368 227.41,-127.927 226.74,-134.895\"/>\r\n",
        "<text text-anchor=\"middle\" x=\"176\" y=\"-130.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">4</text>\r\n",
        "</g>\r\n",
        "<!-- 2&#45;&gt;3 -->\r\n",
@@ -528,8 +528,8 @@
        "</g>\r\n",
        "<!-- 4&#45;&gt;7 -->\r\n",
        "<g id=\"edge12\" class=\"edge\"><title>4&#45;&gt;7</title>\r\n",
-       "<path fill=\"none\" stroke=\"red\" d=\"M272.986,-131.98C307.641,-127.705 388.889,-116.9 456,-102 458.892,-101.358 461.898,-100.616 464.88,-99.8316\"/>\r\n",
-       "<polygon fill=\"red\" stroke=\"red\" points=\"466.029,-103.145 474.722,-97.0886 464.15,-96.4019 466.029,-103.145\"/>\r\n",
+       "<path fill=\"none\" stroke=\"red\" stroke-width=\"4\" d=\"M272.986,-131.98C307.641,-127.705 388.889,-116.9 456,-102 458.892,-101.358 461.898,-100.616 464.88,-99.8316\"/>\r\n",
+       "<polygon fill=\"red\" stroke=\"red\" stroke-width=\"4\" points=\"466.029,-103.145 474.722,-97.0886 464.15,-96.4019 466.029,-103.145\"/>\r\n",
        "<text text-anchor=\"middle\" x=\"373.5\" y=\"-120.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">4</text>\r\n",
        "</g>\r\n",
        "<!-- 5&#45;&gt;6 -->\r\n",
@@ -554,7 +554,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0xa6f06d0>"
+       "<graphviz.dot.Digraph at 0x5f4bd10>"
       ]
      },
      "metadata": {},
@@ -572,7 +572,7 @@
        " [[0, 1, 4, 7], 14]]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
